aduh maaf bgt yh kl slh

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DATABASE_URL=
-DB_HOST=
-DB_NAME=
-DB_USER=
-DB_PORT=
-DB_PASSWORD=
+DB_HOST=localhost
+DB_NAME=postgress
+DB_USER=postgres
+DB_PORT=5432
+DB_PASSWORD=postgres
